package ej1.Figura.elipse;

public abstract class  Circulo extends Elipse {
}
