package ej1.Figura.poligono;

public abstract class  Triangulo {
}
