package ej1.Figura.poligono.cuadrilatero;

public class Cuadrado extends Rectangulo {

}
