package ej1.Figura.elipse;

public abstract class  Elipse {
    public Circulo circulo;
    public Circulo getCirculo() { return circulo; }
    public void setCirculo(Circulo circulo) { this.circulo = circulo; }
}
