package ej1.Figura.poligono.cuadrilatero;

public abstract class  Cuadrilatero {
}
