package ej1.Figura.poligono.cuadrilatero;

public abstract class Rectangulo extends Cuadrilatero {
    public Cuadrado cuadrado;

    public Cuadrado getCuadrado() { return cuadrado; }
    public void setCuadrado(Cuadrado cuadrado) { this.cuadrado = cuadrado; }
}
