package ej1.Figura.poligono.punto;

public abstract class Lado() {
    private Punto punto;
    public Punto getPunto() { return punto; }
    public void setPunto(Punto punto) { this.punto = punto; }

    def __init__
}
