package ej1.Figura.poligono.punto;

public class Punto extends Lado {

}
